--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -21,3 +21,11 @@
 [[constraint]]
   branch = "master"
   name = "github.com/segmentio/kafka-go"
+
+[[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.0.6"
+
+[[constraint]]
+  name = "github.com/alecthomas/kingpin"
+  version = "2.2.6"
