--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,3 +29,7 @@
 [[constraint]]
   name = "github.com/alecthomas/kingpin"
   version = "2.2.6"
+
+[[constraint]]
+  name = "github.com/robfig/cron"
+  version = "1.1.0"
