--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,3 +33,15 @@
 [[constraint]]
   name = "github.com/robfig/cron"
   version = "1.1.0"
+
+[[constraint]]
+  branch = "v3"
+  name = "gopkg.in/sohlich/elogrus.v3"
+
+[[constraint]]
+  name = "github.com/sarulabs/di"
+  version = "2.1.0"
+
+[[constraint]]
+  name = "github.com/segmentio/ksuid"
+  version = "1.0.2"
